--- a/templates/layouts/main.gohtml
+++ b/templates/layouts/main.gohtml
@@ -12,9 +12,6 @@
                     <a href="{{url "home"}}" class="navbar-item">{{.AppName}}</a>
                 </div>
                 <div id="navbarMenu" class="navbar-menu">
-                    <div class="navbar-end">
-                        {{template "search" .}}
-                    </div>
                 </div>
             </div>
         </nav>
@@ -23,24 +20,9 @@
             <div class="columns">
                 <div class="column is-2">
                     <aside class="menu" hx-boost="true">
-                        <p class="menu-label">General</p>
+                        <p class="menu-label">Dashboards</p>
                         <ul class="menu-list">
-                            <li>{{link (url "home") "Dashboard" .Path}}</li>
-                            <li>{{link (url "about") "About" .Path}}</li>
-                            <li>{{link (url "contact") "Contact" .Path}}</li>
-                            <li>{{link (url "cache") "Cache" .Path}}</li>
-                            <li>{{link (url "task") "Task" .Path}}</li>
-                        </ul>
-
-                        <p class="menu-label">Account</p>
-                        <ul class="menu-list">
-                            {{- if .IsAuth}}
-                                <li>{{link (url "logout") "Logout" .Path}}</li>
-                            {{- else}}
-                                <li>{{link (url "login") "Login" .Path}}</li>
-                                <li>{{link (url "register") "Register" .Path}}</li>
-                                <li>{{link (url "forgot_password") "Forgot password" .Path}}</li>
-                            {{- end}}
+                            <li>{{link (url "dashboard") "Errored Workspaces" .Path}}</li>
                         </ul>
                     </aside>
                 </div>
