--- a/templates/pages/home.gohtml
+++ b/templates/pages/home.gohtml
@@ -15,7 +15,7 @@
 <section class="section">
     <div class="container">
         <p>
-            The idea is that you can use these dashboards to view information about PTITCS workspaces.
+            The idea is that you can use these dashboards to view information about rolasotelo's workspaces.
         </p>
     </div>
 </section>
